armclang/Serial/MDK-ARM/.eide/log/unify_builder.log
[2022-05-07 13:52:45]	[done]
	build successfully !

[2022-05-07 18:39:09]	[done]
	build successfully !

[2022-05-07 19:05:12]	compilation failed at : "c:\Users\91677\Desktop\STM32\Serial\Core\Src\usart.c", exit code: 1
  at unify_builder.Program.compileByMulThread (System.Int32 thrNum, unify_builder.CmdGenerator+CmdInfo[] cmds, System.Collections.Generic.List`1[T] errLogs) [0x00104] in <c833688a764e49d8a80e8dad07cf8dd9>:0 
  at unify_builder.Program.Main (System.String[] args) [0x018da] in <c833688a764e49d8a80e8dad07cf8dd9>:0 
---
./../Core/Src/usart.c:119:9: error: '#pragma import' is an ARM Compiler 5 extension, and is not supported by ARM Compiler 6 [-Warmcc-pragma-import]
#pragma import(__use_no_semihosting)
        ^
./../Core/Src/usart.c:128:8: error: redefinition of '__FILE'
struct __FILE
       ^
D:\Code\Keil_v5\ARM\ARMCLANG\bin\..\include\stdio.h:119:8: note: previous definition is here
struct __FILE {
       ^
2 errors generated.

[2022-05-07 19:23:31]	compilation failed at : "c:\Users\91677\Desktop\STM32\Serial\Core\Src\usart.c", exit code: 1
  at unify_builder.Program.compileByMulThread (System.Int32 thrNum, unify_builder.CmdGenerator+CmdInfo[] cmds, System.Collections.Generic.List`1[T] errLogs) [0x00104] in <c833688a764e49d8a80e8dad07cf8dd9>:0 
  at unify_builder.Program.Main (System.String[] args) [0x018da] in <c833688a764e49d8a80e8dad07cf8dd9>:0 
---
./../Core/Src/usart.c:128:8: error: redefinition of '__FILE'
struct __FILE
       ^
D:\Code\Keil_v5\ARM\ARMCLANG\bin\..\include\stdio.h:119:8: note: previous definition is here
struct __FILE {
       ^
1 error generated.

[2022-05-07 19:29:18]	[done]
	build successfully !

[2022-05-07 20:24:15]	link failed !, exit code: 1
  at unify_builder.Program.Main (System.String[] args) [0x01a04] in <c833688a764e49d8a80e8dad07cf8dd9>:0 
---
Error: L6200E: Symbol __stdout multiply defined (by stdio_streams.o and usart.o).
Not enough information to list image symbols.
Not enough information to list the image map.
Finished: 2 information, 0 warning and 1 error messages.


[2022-05-07 20:25:12]	link failed !, exit code: 1
  at unify_builder.Program.Main (System.String[] args) [0x01a04] in <c833688a764e49d8a80e8dad07cf8dd9>:0 
---
Error: L6200E: Symbol __stdout multiply defined (by stdio_streams.o and usart.o).
Not enough information to list image symbols.
Not enough information to list the image map.
Finished: 2 information, 0 warning and 1 error messages.


[2022-05-07 20:32:32]	[done]
	build successfully !

[2022-05-13 17:52:01]	[done]
	build successfully !

